--- a/src/styling/navbar.css
+++ b/src/styling/navbar.css
@@ -42,7 +42,7 @@
     z-index: 10;
 }
 
-.logo a {
+.logo {
     text-decoration: none;
     color: white;
     font-size: 1.3rem;
